refactor: correct typos
